[gd_scene load_steps=2 format=3 uid="uid://dqk13ie7qb8jq"]

[ext_resource type="Script" path="res://vehicles/common/vehicle_3W/vehicle_3W_lights/vehicle_3W_lights.gd" id="1_v8w4q"]

[node name="Vehicle_3W_Lights" type="Node3D"]
script = ExtResource("1_v8w4q")

[node name="LowBeam_L" type="SpotLight3D" parent="."]
visible = false
light_color = Color(1, 1, 0.92549, 1)
light_energy = 16.0
spot_range = 30.0

[node name="LowBeam_R" type="SpotLight3D" parent="."]
visible = false
light_color = Color(1, 1, 0.92549, 1)
light_energy = 16.0
spot_range = 30.0

[node name="HighBeam_L" type="SpotLight3D" parent="."]
visible = false
light_color = Color(1, 1, 0.921569, 1)
light_energy = 16.0
spot_range = 100.0

[node name="HighBeam_R" type="SpotLight3D" parent="."]
visible = false
light_color = Color(1, 1, 0.921569, 1)
light_energy = 16.0
spot_range = 100.0
